# scaffold-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  cookiecutter.json  index.html  justfile  mkdocs.yml  mypy.ini  package.json  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: build.yaml  pages.yaml  release.yaml  test.yaml
hooks/: post_gen_hook.py  post_gen_project.py  pre_gen_project.py
scripts/: clean.py  docs.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_lib.py  util.py
{{cookiecutter.package_name}}/: .gitlab-ci.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: build.yaml  publish.yaml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/tests/: __init__.py  conftest.py
{{cookiecutter.package_name}}/tests/integration/: __init__.py
{{cookiecutter.package_name}}/tests/unit/: __init__.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  LICENSE.md  README.md  justfile  mkdocs.yml  mypy.ini  package.json  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: build.yaml  package.yaml  pages.yaml  publish.yaml  release.yaml  test.yaml
{{cookiecutter.project_name}}/.theia/: settings.json
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/docs/js/: index.js  termynal.js
{{cookiecutter.project_name}}/examples/: __init__.py
{{cookiecutter.project_name}}/scripts/: __init__.py  build_docs.py  clean.py  docs.py  setup_tmate.ps1  setup_tmate.sh  sort_pyproject.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/tests/: __init__.py
{{cookiecutter.project_name}}/tests/unit/: test_lib.py
{{cookiecutter.project_name}}/tests/util/: __init__.py
