# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
extend-exclude = "{{cookiecutter.project_name}}/*"
line-length = 80

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
exclude = [
    '\.benchmarks/',
    '\.hypothesis/',
    '\.pytest_cache/',
    '\.venv/',
    'tmp/',
    '\{\{cookiecutter.project_name\}\}/',
]
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
authors = ["Macklan Weinstein <macklan.weinstein@gmail.com>"]
description = "Python project template for scaffolding."
homepage = "https://github.com/scruffaluff/scaffold-python"
keywords = []
license = "MIT"
name = "scaffold-python"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = { python = "^3.8.0", version = "^5.0.0" }
flake8-bugbear = "^22.10.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.0"
mccabe = { python = "^3.8.0", version = "^0.7.0" }
mkdocs = { python = "^3.8.0", version = "^1.4.0" }
mkdocs-material = { python = "^3.8.0", version = "^8.5.0" }
mypy = "^0.982"
pdbpp = "^0.10.0"
pymdown-extensions = { python = "^3.8.0", version = "^9.7.0" }
pytest = "^7.2.0"
pytest-cookies = "^0.6.0"
pytest-mock = "^3.10.0"
types-toml = "^0.10.0"
