# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
extend-exclude = "{{cookiecutter.project_name}}/*"
line-length = 80

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
exclude = [
    '\.benchmarks/',
    '\.cache/',
    '\.hypothesis/',
    '\.pytest_cache/',
    '\.venv/',
    'tmp/',
    '\{\{cookiecutter.project_name\}\}/',
]
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
authors = ["Macklan Weinstein <macklan.weinstein@gmail.com>"]
description = "Python project template for scaffolding."
homepage = "https://github.com/scruffaluff/scaffold-python"
keywords = []
license = "MIT"
name = "scaffold-python"
readme = "README.md"
version = "0.2.1"

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.0"
flake8-bugbear = "^24.10.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.0"
mccabe = "^0.7.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mypy = "^1.13.0"
pymdown-extensions = "^10.12.0"
pyreadline3 = { markers = "sys_platform == 'win32'", version = "^3.5.0" }
pytest = "^8.3.0"
pytest-cookies = "^0.7.0"
pytest-mock = "^3.14.0"
types-toml = "^0.10.0"

[tool.pytest.ini_options]
addopts = "-sv"
filterwarnings = ["ignore::DeprecationWarning"]
python_classes = "Test*"
python_files = ["__init__.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
