[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.black]
line-length = 100

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if sys.version_info.*"
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = ["{{ cookiecutter.package_name }}"]

[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
description = "{{ cookiecutter.package_description }}"
homepage = "{{ cookiecutter.project_homepage }}"
keywords = []
license = "MIT"
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
version = "{{ cookiecutter.package_version }}"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.0.8"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = { version = "^5.0.1", extras = ["toml"] }
flake8 = "^3.7.9"
mypy = "^0.761"
pre-commit = "^1.21.0"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pytest-testmon = "^1.0.2"
pytest-watch = "^4.2.0"
toml = "^0.10.0"
tox = "^3.14.3"

[tool.poetry.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.main:app"
