# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.coverage.report]
exclude_lines = [
    "if sys.version_info.*",
    "pragma: no cover",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = ["{{ cookiecutter.project_slug }}"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
exclude = [
    '\.benchmarks/',
    '\.cache/',
    '\.hypothesis/',
    '\.pytest_cache/',
    '\.venv/',
    'tmp/',
]
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
description = "{{ cookiecutter.project_description }}"
documentation = "{{ cookiecutter.project_homepage }}"
homepage = "{{ cookiecutter.project_repository }}"
keywords = []
{%- if cookiecutter.license == "MIT" %}
license = "MIT"
{%- endif %}
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
version = "{{ cookiecutter.project_version }}"

[tool.poetry.dependencies]
python = "^3.8.1"
{%- if cookiecutter.cli_support == "yes" %}
typer = "^0.12.0"
{%- endif %}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.0"
black = { extras = ["jupyter"], version = "^24.3.0" }
coverage = { extras = ["toml"], version = "^7.4.0" }
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.0"
mccabe = "^0.7.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = "^0.24.0"
mypy = "^1.9.0"
nbqa = "^1.8.0"
py-spy = "^0.3.0"
pymdown-extensions = "^10.7.0"
pyreadline3 = { markers = "sys_platform == 'win32'", version = "^3.4.0" }
pytest = "^8.1.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
toml = "^0.10.0"
tox = "^4.14.0"
types-toml = "^0.10.0"

{% if cookiecutter.cli_support == "yes" -%}
[tool.poetry.scripts]
{{ cookiecutter.project_name }} = "{{ cookiecutter.project_slug }}.__main__:app"
{% endif -%}

[tool.pytest.ini_options]
addopts = "-sv"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "e2e: mark as end to end test.",
    "unit: mark as unit test.",
]
python_classes = "Test*"
python_files = [
    "__init__.py",
    "test_*.py",
]
python_functions = ["test_*"]
testpaths = ["tests"]
